# cpp-timbreID

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  juce_timbreID.h  move.ipynb
Demos/: .gitignore
Demos/Demo-ExtractAllFeatures/: Demo-ExtractAllFeatures.jucer  Demo-ExtractAllFeatures.jucer.backupWithExternalAubioLinked
Demos/Demo-ExtractAllFeatures/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-ExtractAllFeatures/Source/: LED.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  csv_saver.h  feature_extractors.h  setParamBox.cpp  windowed_feature_extractors.h
Demos/Demo-KnnClassifier/: Demo-KnnClassifier.jucer
Demos/Demo-KnnClassifier/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-KnnClassifier/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Demos/Demo-attackTime/: Demo-attackTime.jucer  build_release.sh
Demos/Demo-attackTime/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-attackTime/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SetParamBox.cpp  SetParamBox.h
Demos/Demo-aubioonset/: Demo-aubioonset.jucer
Demos/Demo-aubioonset/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Demos/Demo-aubioonset/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Demos/Demo-bark/: Demo-bark.jucer
Demos/Demo-bark/Source/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  setParamBox.cpp
Demos/Demo-bark2/: Demo-bark2.jucer
Demos/Demo-bark2/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-bark2/Source/: LED.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  setParamBox.cpp  setParamBox.h
Demos/Demo-barkSpec/: Demo-barkSpec.jucer
Demos/Demo-barkSpec/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-barkSpec/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Demos/Demo-barkSpecBrightness/: Demo-barkSpecBrightness.jucer
Demos/Demo-barkSpecBrightness/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-barkSpecBrightness/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Demos/Demo-bfcc/: Demo-bfcc.jucer
Demos/Demo-bfcc/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demos/Demo-cepstrum/: Demo-cepstrum.jucer
Demos/Demo-guitarTimbreClassifier/: Demo-guitarTimbreClassifier.jucer  Demo-guitarTimbreClassifier.jucer.backupWithExternalAubio  build_dependencies-aarch64.sh  cleanAllBuilds.sh  compileAllBuilds.sh  startTechniqueClassifier.sh  txtArray_toJson.ipynb
Demos/Demo-headlessKnn/: Demo-headlessKnn.jucer
Demos/Demo-mfcc/: Demo-mfcc.jucer
Demos/Demo-peakSample/: Demo-peakSample.jucer
Demos/Demo-zeroCrossing/: Demo-zeroCrossing.jucer  myvst.jucer
Demos/TOFIX-Demo-KnnClassifier/: Demo-KnnClassifier.jucer
Demos/TOFIX-Demo-aubioonset/: Demo-aubioonset.jucer
Demos/elk-utilities/: compileRPI4.sh  copyToElk.sh
UnitTests/: UnitTests.cbp  UnitTests.depend  UnitTests.layout  main.cpp
UnitTests/conversionFunctionsTests/: test_bark2freq.cpp  test_bin2freq.cpp  test_freq2bark.cpp  test_freq2bin.cpp  test_freq2mel.cpp  test_mel2freq.cpp
examples/Demo-attackTime/: Demo-attackTime.jucer  run_standalone.sh
examples/Demo-bfcc/: Demo-bfcc.jucer
examples/Demo-guitarTimbreClassifier/Tests/: CMakeLists.txt
examples/Demo-headlessKnn/: Demo-headlessKnn.jucer
examples/Demo-zeroCrossing/: Demo-zeroCrossing.jucer
include/: attackTime.h  attackTime.hpp  aubioOnsetWrap.hpp  bark.hpp  bark2freq.hpp  barkSpec.h  barkSpec.hpp  barkSpecBrightness.h  barkSpecBrightness.hpp  bfcc.h  bfcc.hpp  bin2freq.h  bin2freq.hpp  cepstrum.h  cepstrum.hpp  conversions.h  freq2bark.hpp  freq2bin.hpp  freq2mel.hpp  knn.hpp  mel2freq.hpp  mfcc.h  mfcc.hpp  peakSample.h  peakSample.hpp  tIDLib.h  tIDLib.hpp  tidLog.hpp  tidRTLog.h  tidRTLog.hpp  tidTime.hpp  timbreid.h  windowed_feature_extraction.h  zeroCrossing.h  zeroCrossing.hpp
libs/: build_dependencies.sh
src/: attackTime.cpp  bark2freq.cpp  barkSpec.cpp  barkSpecBrightness.cpp  bfcc.cpp  bin2freq.cpp  cepstrum.cpp  freq2bark.cpp  freq2bin.cpp  freq2mel.cpp  mel2freq.cpp  mfcc.cpp  peakSample.cpp  tIDLib.cpp  tidLog.cpp  zeroCrossing.cpp
tests/: base_tests.cpp
(+146 files in other folders)
